--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,25 +2,25 @@
 
 <footer id="wb-info">
   <!--<nav class="container wb-navcurr">
-    <h2 class="wb-inv">{{ site.data.i18n.footer.AboutGovernment[page.lang] }}</h2>
+    <h2 class="wb-inv">{{ site.data.i18n.general.footer.AboutGovernment[page.lang] }}</h2>
     ...
   </nav>-->
   <div class="brand">
     <div class="container">
       <div class="row">
         <nav class="col-md-9 col-lg-10 ftr-urlt-lnk">
-          <h2>{{ site.data.i18n.footer.AboutSite[page.lang] }}</h2>
+          <h2>{{ site.data.i18n.general.footer.AboutSite[page.lang] }}</h2>
           <ul>
-            <li><a href="{{ site.data.i18n.footer.Nav.Canada[page.lang].link }}" target="_blank">{{ site.data.i18n.footer.Nav.Canada[page.lang].title }}</a></li>
-            <li><a href="{{ site.data.i18n.footer.Nav.Terms[page.lang].link }}" target="_blank">{{ site.data.i18n.footer.Nav.Terms[page.lang].title }}</a></li>
-            <li><a href="{{ site.data.i18n.footer.Nav.Privacy[page.lang].link }}" target="_blank">{{ site.data.i18n.footer.Nav.Privacy[page.lang].title }}</a></li>
+            <li><a href="{{ site.data.i18n.general.footer.Nav.Canada[page.lang].link }}" target="_blank">{{ site.data.i18n.general.footer.Nav.Canada[page.lang].title }}</a></li>
+            <li><a href="{{ site.data.i18n.general.footer.Nav.Terms[page.lang].link }}" target="_blank">{{ site.data.i18n.general.footer.Nav.Terms[page.lang].title }}</a></li>
+            <li><a href="{{ site.data.i18n.general.footer.Nav.Privacy[page.lang].link }}" target="_blank">{{ site.data.i18n.general.footer.Nav.Privacy[page.lang].title }}</a></li>
           </ul>
         </nav>
         <div class="col-xs-6 visible-sm visible-xs tofpg">
-          <a href="#wb-cont">{{ site.data.i18n.footer.TopOfPage[page.lang] }} <span class="glyphicon glyphicon-chevron-up"></span></a>
+          <a href="#wb-cont">{{ site.data.i18n.general.footer.TopOfPage[page.lang] }} <span class="glyphicon glyphicon-chevron-up"></span></a>
         </div>
         <div class="col-xs-6 col-md-3 col-lg-2 text-right">
-          <object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" aria-label="{{ site.data.i18n.footer.Logo[page.lang] }}"></object>
+          <object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" aria-label="{{ site.data.i18n.general.footer.Logo[page.lang] }}"></object>
         </div>
       </div>
     </div>
