--- a/_includes/ossTable.html
+++ b/_includes/ossTable.html
@@ -3,18 +3,19 @@
 <!-- Filters -->
 <div class="col-md-3">
   <details open>
-    <summary><h4 class="h4">Filter Options</h4></summary>
+    <summary><h4 class="h4">{{ site.data.i18n.tables.filterOptions[page.lang] }}</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
       <div class="form-group">
-          <label for="dt_govLevel">{{ site.LevelOfGovernment[page.lang] }}</label>
-          <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="6">
-            <option value="">&nbsp;</option>
-            <option value="federal">{{ site.Federal[page.lang] }}</option>
-            <option value="provincial">{{ site.Provincial[page.lang] }}</option>
-            <option value="municipal">{{ site.Municipal[page.lang] }}</option>
-            <option value="aboriginal">{{ site.Aboriginal[page.lang] }}</option>
-          </select>
+        <label for="dt_govLevel">{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</label>
+        <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="7">
+          <option value="">&nbsp;</option>
+          {%- for govLevels in site.data.i18n.administrations -%}
+          {%- assign govLevel = govLevels[1] -%}
+          <option value="{{ govLevel.value }}">{{ govLevel[page.lang] }}</option>
+          {%- endfor -%}
+        </select>
       </div>
+
       <div class="form-group">
         <label for="dt_licence">Licence</label>
         <select class="form-control" id="dt_licence" name="dt_licence" data-column="2">
@@ -51,14 +52,15 @@
         </select>
       </div>
 
-    <div class="row">
+      <div class="row">
         <div class="col-xs-6">
-          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.Filter[page.lang] }}</button>
+          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.data.i18n.tables.filter[page.lang] }}</button>
         </div>
         <div class="col-xs-6">
-          <button type="reset" class="btn btn-default">{{ site.Clear[page.lang] }}</button>
+          <button type="reset" class="btn btn-default">{{ site.data.i18n.tables.clear[page.lang] }}</button>
         </div>
-    </div>
+      </div>
+
     </form>
   </details>
 </div>
@@ -68,6 +70,7 @@
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,5,6], "visible": false}], "paging": true}'>
     <thead>
       <tr>
+        <!-- TODO: Translations, maybe use those from the form file -->
         <th>Software</th>
         <th>Description</th>
         <th>Licence</th>
@@ -95,26 +98,24 @@
             {%- endfor -%}
           </td>
           <td>{{ oss.administrations.size }}</td>
-          <td>
-            <a href="{{ oss.homepageURL[page.lang] }}" target="_blank">{{ oss.homepageURL[page.lang] | remove: "https://" | rstrip }}</a>
-          </td>
+          <td><a href="{{ oss.homepageURL[page.lang] }}" target="_blank">{{ oss.homepageURL[page.lang] | remove: "https://" | rstrip }}</a></td>
           <td>
             {% for administration in oss.administrations %}
             {% assign aName = site.data.administrations.federal | where: "code", administration.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                {{ site.Federal[page.lang] }}
+                {{ site.data.i18n.administrations.federal[page.lang] }}
               {% endif %}
             {% assign aName = site.data.administrations.provincial | where: "code", administration.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                {{ site.Provincial[page.lang] }}
+                {{ site.data.i18n.administrations.provincial[page.lang] }}
               {% endif %}
             {% assign aName = site.data.administrations.municipal | where: "code", administration.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                {{ site.Municipal[page.lang] }}
+                {{ site.data.i18n.administrations.municipal[page.lang] }}
               {% endif %}
             {% assign aName = site.data.administrations.aboriginal | where: "code", administration.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                {{ site.Aboriginal[page.lang] }}
+                {{ site.data.i18n.administrations.aboriginal[page.lang] }}
               {% endif %}
             {% endfor %}
           </td>
@@ -155,8 +156,6 @@
             {%- endfor -%}
           </div>
         {%- endfor -%}
-
-        <!--<p>{{ oss }}</p>-->
       </div>
     </section>
 
