--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -3,10 +3,10 @@
 <!-- Filter dropdowns -->
 <div class="col-md-3">
   <details open>
-    <summary><h4 class="h4">{{ site.FilterOptions[page.lang] }}</h4></summary>
+    <summary><h4 class="h4">{{ site.data.i18n.tables.filterOptions[page.lang] }}</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
       <div class="form-group">
-        <label for="dt_govLevel">{{ site.LevelOfGovernment[page.lang] }}</label>
+        <label for="dt_govLevel">{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</label>
         <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="7">
           <option value="">&nbsp;</option>
           {%- for govLevels in site.data.i18n.administrations -%}
@@ -17,7 +17,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_department">Administration</label>
+        <label for="dt_department">{{ site.data.i18n.tables.administrations[page.lang] }}</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
           <option value="">&nbsp;</option>
           {%- assign admin_array = "" | split: ',' -%}
@@ -64,7 +64,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_organization">{{ site.Organization[page.lang] }}</label>
+        <label for="dt_organization">{{ site.data.i18n.tables.organization[page.lang] }}</label>
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="5">
           <option value="">&nbsp;</option>
           {%- assign org_array = "" | split: ',' -%}
@@ -89,7 +89,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_license">{{ site.License[page.lang] }}</label>
+        <label for="dt_license">{{ site.data.i18n.tables.license[page.lang] }}</label>
         <select class="form-control" id="dt_license" name="dt_license" data-column="3">
           <option value="">&nbsp;</option>
           {%- assign license_array = "" | split: ',' -%}
@@ -114,7 +114,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_tag">{{ site.Tag[page.lang] }}</label>
+        <label for="dt_tag">{{ site.data.i18n.tables.tag[page.lang] }}</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
           <option value="">&nbsp;</option>
           {%- assign tag_array = "" | split: ',' -%}
@@ -140,10 +140,10 @@
 
       <div class="row">
         <div class="col-xs-6">
-          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.Filter[page.lang] }}</button>
+          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.data.i18n.tables.filter[page.lang] }}</button>
         </div>
         <div class="col-xs-6">
-          <button type="reset" class="btn btn-default">{{ site.Clear[page.lang] }}</button>
+          <button type="reset" class="btn btn-default">{{ site.data.i18n.tables.clear[page.lang] }}</button>
         </div>
       </div>
 
@@ -155,22 +155,23 @@
 <div class="col-md-9" style="margin-bottom: 20px;">
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0,4,5,7,8,9,10,11,12,13,14], "visible": false}], "paging": true}'>
     <thead>
+      <!-- TODO: Better the translations, maybe use those from the form file -->
       <tr>
         <th>Administration</th>
-        <th>{{ site.ProjectName[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.projectName[page.lang] }}</th>
         <th>Description</th>
-        <th>{{ site.License[page.lang] }}</th>
-        <th>{{ site.Tag[page.lang] }}</th>
-        <th>{{ site.Organization[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.license[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.organization[page.lang] }}</th>
         <th>Code Repo</th>
-        <th>{{ site.LevelOfGovernment[page.lang] }}</th>
-        <th>{{ site.Language[page.lang] }}</th>
-        <th>{{ site.RelatedCode[page.lang] }}</th>
-        <th>{{ site.Status[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</th>
+        <th>{{ site.data.i18n.general.language[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.relatedCode[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.status[page.lang] }}</th>
         <th>Vcs</th>
         <th>Version</th>
-        <th>{{ site.CodeCreated[page.lang] }}</th>
-        <th>{{ site.MetadataLastUpdatedCode[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.created[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.metadataLastUpdated[page.lang] }}</th>
       </tr>
     </thead>
     <tbody>
@@ -213,20 +214,16 @@
                 {{ tag }}&nbsp;
               {%- endfor -%}
             </td>
-            <td>
-              {{ release.organization[page.lang] }}
-            </td>
+            <td>{{ release.organization[page.lang] }}</td>
             <td>
               <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
                 {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
               </a>
             </td>
+            <td>{{fptms[0] | capitalize}}</td>
             <td>
-              {{fptms[0] | capitalize}}
-            </td>
-            <td>
-              {%- for langauge in release.languages -%}
-                {{ langauge }}&nbsp;
+              {%- for languages in release.languages -%}
+                {{ languages }}&nbsp;
               {%- endfor -%}
             </td>
             <td>
@@ -234,21 +231,11 @@
                 <a href= "{{ relatedCode.URL[page.lang] }}">{{ relatedCode.name[page.lang] }}</a>
               {%- endfor -%}
             </td>
-            <td>
-              {{ release.status }}&nbsp;
-            </td>
-            <td>
-              {{ release.vcs }}&nbsp;
-            </td>
-            <td>
-              {{ release.version }}&nbsp;
-            </td>
-            <td>
-              {{ release.date.created }}&nbsp;
-            </td>
-            <td>
-              {{ release.date.metadataLastUpdated }}&nbsp;
-            </td>
+            <td>{{ release.status }}&nbsp;</td>
+            <td>{{ release.vcs }}&nbsp;</td>
+            <td>{{ release.version }}&nbsp;</td>
+            <td>{{ release.date.created }}&nbsp;</td>
+            <td>{{ release.date.metadataLastUpdated }}&nbsp;</td>
           </tr>
           {%- endfor -%}
         {%- endfor -%}
@@ -271,7 +258,7 @@
         </header>
         <div class="modal-body">
           <p><strong>{{ release.description[page.lang] }}</strong></p>
-          <p>{{ site.LevelOfGovernment[page.lang] }}: {{fptms[0] | capitalize}}</p>
+          <p>{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}: {{fptms[0] | capitalize}}</p>
           {%- assign aName = site.data.administrations.federal | where: "code", admin.adminCode -%}
           {%- if aName[0].name[page.lang] != nil -%}
             <p>Administration: {{ aName[0].name[page.lang] }}</p>
@@ -293,30 +280,30 @@
           {%- endif -%}
 
         {%- if release.organization[page.lang] != nil -%}
-          <p>{{ site.Organization[page.lang] }}: {{ release.organization[page.lang] }}</p>
+          <p>{{ site.data.i18n.tables.organization[page.lang] }}: {{ release.organization[page.lang] }}</p>
         {%- endif -%}
         <p>Source code:
           <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
               {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
           </a>
         </p>
-        <p>{{ site.License[page.lang] }}(s):
+        <p>{{ site.data.i18n.tables.license[page.lang] }}(s):
           {%- for license in release.licenses -%}
             <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
           {%- endfor -%}
         </p>
-        <p>{{ site.Tag[page.lang] }}(s):
+        <p>{{ site.data.i18n.tables.tag[page.lang] }}(s):
           {%- for tag in release.tags[page.lang] -%}
             {{ tag }}
           {%- endfor -%}
         </p>
-        <p>{{ site.CodeLanguage[page.lang] }}(s):
-          {%- for langauge in release.languages -%}
-            {{ langauge }}
+        <p>{{ site.data.i18n.tables.language[page.lang] }}(s):
+          {%- for languages in release.languages -%}
+            {{ languages }}
           {%- endfor -%}
         </p>
         {%- if release.status != nil -%}
-          <p>{{ site.Status[page.lang] }}: {{ release.status }}</p>
+          <p>{{ site.data.i18n.tables.status[page.lang] }}: {{ release.status }}</p>
         {%- endif -%}
         {%- if release.vcs != nil -%}
           <p>Version Control System: {{ release.vcs }}</p>
@@ -324,15 +311,15 @@
         {%- if release.version != nil -%}
           <p>Version: {{ release.version }}</p>
         {%- endif -%}
-        <p>{{ site.CodeCreated[page.lang] }}: {{ release.date.created }}</p>
-        <p>{{ site.LastUpdatedCode[page.lang] }}: {{ release.date.metadataLastUpdated }}</p>
+        <p>{{ site.data.i18n.tables.created[page.lang] }}: {{ release.date.created }}</p>
+        <p>{{ site.data.i18n.tables.lastUpdated[page.lang] }}: {{ release.date.metadataLastUpdated }}</p>
 
         <h3>Contact</h3>
         {%- if release.contact.name != nil -%}
           <p>{{ release.contact.name }}</p>
         {%- endif -%}
         {%- if release.contact.phone != nil -%}
-          <p>{{ site.ContactPhoneCode[page.lang] }}: {{ release.contact.phone }}</p>
+          <p>{{ site.data.i18n.tables.contactPhone[page.lang] }}: {{ release.contact.phone }}</p>
         {%- endif -%}
         {%- if release.contact.email != nil -%}
           <p><a href="mailto:{{ release.contact.email }}" target="_blank">{{ release.contact.email }}</a></p>
