--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,26 +1,26 @@
 <ul id="wb-tphp">
-  <li class="wb-slc"><a class="wb-sl" href="#wb-cont">{{ site.SkipToMain[page.lang] }}</a></li>
-  <li class="wb-slc visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info">{{ site.SkipToAbout[page.lang] }}</a></li>
+  <li class="wb-slc"><a class="wb-sl" href="#wb-cont">{{ site.data.i18n.general.head.skipToMain[page.lang] }}</a></li>
+  <li class="wb-slc visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info">{{ site.data.i18n.general.head.skipToAbout[page.lang] }}</a></li>
 </ul>
 
 <header>
   <div id="wb-bnr" class="container">
     <section id="wb-lng" class="visible-md visible-lg text-right">
-      <h2 class="wb-inv">{{ site.LanguageSelection[page.lang] }}</h2>
+      <h2 class="wb-inv">{{ site.data.i18n.general.head.languageSelection[page.lang] }}</h2>
       <div class="row">
         <div class="col-md-12">
           <ul class="list-inline margin-bottom-none">
           {%- assign posts=site.posts | where:"ref", page.ref | sort: 'lang' -%}
           {%- for my_post in posts -%}
             {%- if my_post.lang != page.lang %}
-            <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: '..' }}">{{ site.language[my_post.lang] }}</a></li>
+            <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: '..' }}">{{ site.data.i18n.general.language[my_post.lang] }}</a></li>
             {%- endif -%}
           {%- endfor -%}
 
           {%- assign pages=site.pages | where:"ref", page.ref | sort: 'lang' -%}
           {%- for my_page in pages -%}
             {%- if my_page.lang != page.lang %}
-            <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: '..' }}">{{ site.language[my_page.lang] }}</a></li>
+            <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: '..' }}">{{ site.data.i18n.general.language[my_page.lang] }}</a></li>
             {%- endif -%}
           {%- endfor %}
           </ul>
@@ -30,16 +30,16 @@
 
     <div class="row">
       <div class="brand col-xs-8 col-sm-9 col-md-6">
-        <a href="https://www.canada.ca/en.html">
-          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-{{ page.lang }}.svg" alt="Government of Canada / Gouvernement du Canada">
-          <span class="wb-inv"> Government of Canada / <span lang="fr">Gouvernement du Canada</span></span>
+        <a href="{{ site.data.i18n.general.nav.Canada.link[page.lang] }}">
+          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-{{ page.lang }}.svg" alt="{{ site.data.i18n.general.nav.Canada.en }} / {{ site.data.i18n.general.nav.Canada.fr }}">
+          <span class="wb-inv"> {{ site.data.i18n.general.nav.Canada.en }} / <span lang="fr">{{ site.data.i18n.general.nav.Canada.fr }}</span></span>
         </a>
       </div>
 
       <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
-        <h2>{{ site.SearchAndMenus[page.lang] }}</h2>
+        <h2>{{ site.data.i18n.general.head.searchAndMenus[page.lang] }}</h2>
         <ul class="list-inline text-right chvrn">
-          <li><a href="#mb-pnl" title="{{ site.SearchAndMenus[page.lang] }}" aria-controls="mb-pnl" class="overlay-lnk" role="button"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">{{ site.SearchAndMenus[page.lang] }}</span></span></a></li>
+          <li><a href="#mb-pnl" title="{{ site.data.i18n.general.head.searchAndMenus[page.lang] }}" aria-controls="mb-pnl" class="overlay-lnk" role="button"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">{{ site.data.i18n.general.head.searchAndMenus[page.lang] }}</span></span></a></li>
         </ul>
         <div id="mb-pnl"></div>
       </section>
@@ -51,48 +51,29 @@
       <h2 class="wb-inv">Menu</h2>
       <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
       <ul role="menu" aria-orientation="vertical">
-      {%- if page.lang == "en" -%}
-        <li role="presentation"><a role="menuitem" href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
-        <li role="presentation"><a role="menuitem" href="./open-source-software.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
-        <li role="presentation"><a role="menuitem" href="./open-standards.html">{{ site.OpenStandards[page.lang] }}</a></li>
-        <li role="presentation"><a role="menuitem" href="./docs.html">Documentation</a></li>
-      {%- else -%}
-        <li role="presentation"><a role="menuitem" href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
-        <li role="presentation"><a role="menuitem" href="./logiciels-libres.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
-        <li role="presentation"><a role="menuitem" href="./normes-ouvertes.html">{{ site.OpenStandards[page.lang] }}</a></li>
-        <li role="presentation"><a role="menuitem" href="./docs.html">Documentation</a></li>
-      {%- endif %}
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></li>
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.oss[page.lang] }}</a></li>
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a></li>
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a></li>
       </ul>
     </div>
   </nav>
 
   <nav id="wb-bc" property="breadcrumb">
-    <h2>{{ site.YouAreHere[page.lang] }}:</h2>
+    <h2>{{ site.data.i18n.general.head.youarehere[page.lang] }}:</h2>
     <div class="container">
       <ol class="breadcrumb">
-        <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
+        <li><a href="{{ site.data.i18n.general.nav.Canada.link[page.lang] }}">{{ site.data.i18n.general.head.home[page.lang] }}</a></li>
         {% if page.ref != "home" -%}
-          {%- if page.lang == "en" -%}
-        <li><a href="./index.html">{{ site.title[page.lang] }}</a></li>
-          {%- else -%}
-        <li><a href="./index.html">{{ site.title[page.lang] }}</a></li>
-          {%- endif -%}
+          <li><a href="{{ site.data.i18n.general.nav.home.link }}">{{ site.data.i18n.general.nav.home[page.lang] }}</a></li>
         {%- endif -%}
 
         {% if page.ref == "codeGroups" or page.ref == "codeSchema" or page.ref == "codeForm" -%}
-          {%- if page.lang == "en" -%}
-        <li><a href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
-          {%- else -%}
-        <li><a href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
-          {%- endif -%}
+          <li><a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></li>
         {%- endif -%}
 
         {% if page.ref == "ossSchema" -%}
-          {%- if page.lang == "en" -%}
-        <li><a href="./open-source-software.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
-          {%- else -%}
-        <li><a href="./logiciels-libres.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
-          {%- endif -%}
+          <li><a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.oss[page.lang] }}</a></li>
         {%- endif %}
       </ol>
     </div>
