Added accidently removed class to h2 tag

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row">
         <nav class="col-md-9 col-lg-10 ftr-urlt-lnk">
-          <h2>{{ site.data.i18n.general.footer.AboutSite[page.lang] }}</h2>
+          <h2 class="wb-inv">{{ site.data.i18n.general.footer.AboutSite[page.lang] }}</h2>
           <ul>
             <li><a href="{{ site.data.i18n.general.footer.Nav.Canada[page.lang].link }}" target="_blank">{{ site.data.i18n.general.footer.Nav.Canada[page.lang].title }}</a></li>
             <li><a href="{{ site.data.i18n.general.footer.Nav.Terms[page.lang].link }}" target="_blank">{{ site.data.i18n.general.footer.Nav.Terms[page.lang].title }}</a></li>
