add Inline New Admin for OssForm

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,6 +83,7 @@
 {% endif %}
 {% if page.ref == "ossForm" %}
   <script type="text/javascript" src="../assets/js/src/ossForm.js"></script>
+  <script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
 {% endif %}
 <script>
   const REPO_NAME = "{{ site.github_repository }}";
