--- a/_includes/form/presets/orgLevel.html
+++ b/_includes/form/presets/orgLevel.html
@@ -4,7 +4,7 @@
     {% include form/components/label.html name="orgLevel" required=true label=label %}
   <select class="form-control" id="orgLevel" name="orgLevel" required="required">
     <option value="">&nbsp;</option>
-    <option value="aboriginal" selected>{{ site.data.i18n.form.presets.OrgLevel.options.aboriginal[page.lang] }}</option>
+    <option value="aboriginal">{{ site.data.i18n.form.presets.OrgLevel.options.aboriginal[page.lang] }}</option>
     <option value="municipal" selected>{{ site.data.i18n.form.presets.OrgLevel.options.municipal[page.lang] }}</option>
     <option value="provincial" disabled>{{ site.data.i18n.form.presets.OrgLevel.options.provincial[page.lang] }}</option>
     <option value="federal" disabled>{{ site.data.i18n.form.presets.OrgLevel.options.federal[page.lang] }}</option>
