--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -13,8 +13,8 @@
       {% include form/presets/dates.html id=idPreset created=formGroup.created started=formGroup.started modified=formGroup.modified -%}
     {%- when 'description' -%}
       {% include form/presets/description.html id=idPreset -%}
-    {%- when 'homepageUrl' -%}
-      {% include form/presets/homepageUrl.html id=idPreset -%}
+    {%- when 'homepageURL' -%}
+      {% include form/presets/homepageURL.html id=idPreset -%}
     {%- when 'languages' -%}
       {% include form/presets/languages.html id=idPreset -%}
     {%- when 'licenses' -%}
