--- a/_includes/schema/loop.html
+++ b/_includes/schema/loop.html
@@ -12,8 +12,8 @@
           {%- include schema/presets/dates.html id=idPreset created=formGroup.created started=formGroup.started modified=formGroup.modified -%}
         {%- when 'description' -%}
           {%- include schema/presets/description.html id=idPreset -%}
-        {%- when 'homepageUrl' -%}
-          {%- include schema/presets/homepageUrl.html id=idPreset -%}
+        {%- when 'homepageURL' -%}
+          {%- include schema/presets/homepageURL.html id=idPreset -%}
         {%- when 'languages' -%}
           {%- include schema/presets/languages.html id=idPreset -%}
         {%- when 'licenses' -%}
