--- a/_includes/schema/presets/homepageUrl.html
+++ b/_includes/schema/presets/homepageUrl.html
@@ -1,1 +1,1 @@
-{%- include schema/widgets/string-i18n.html id=include.id title="homepageUrl" required=false -%}
+{%- include schema/widgets/string-i18n.html id=include.id title="homepageURL" required=false -%}
