--- a/_includes/form/components/title.html
+++ b/_includes/form/components/title.html
@@ -1,1 +1,2 @@
-<h2{% if include.styles %} style="{{ include.styles }}"{% endif %}>{{ site.data.i18n.form.[include.id][include.title].title[page.lang] }}</h2>
+{%- capture path -%}{{ include.prepend }}{{ include.title }}{%- endcapture -%}
+<h2{% if include.styles %} style="{{ include.styles }}"{% endif %}>{{ site.data.i18n.form.[include.id][path].title[page.lang] }}</h2>
