--- a/_includes/form/widgets/select.html
+++ b/_includes/form/widgets/select.html
@@ -1,4 +1,4 @@
-{%- include form/components/title.html id=include.id title=include.title -%}
+{%- include form/components/title.html id=include.id title=include.title prepend=include.prepend -%}
 <div class="form-group">
   {%- include form/components/label.html id=include.id title=include.title require=include.required -%}
   <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.required == nil or include.required %} required="required"{% endif %}>
