--- a/_includes/form/components/input-i18n-group.html
+++ b/_includes/form/components/input-i18n-group.html
@@ -1,4 +1,4 @@
-<input class="form-control" id="{{ include.lang }}{{ include.title }}{{ include.group }}" name="{{ include.lang }}{{ include.title }}{{ include.group }}" type="{{ include.type | default: "text" }}"
+<input class="form-control" id="{{ include.prepend }}{{ include.lang }}{{ include.title }}{{ include.group }}" name="{{ include.prepend }}{{ include.lang }}{{ include.title }}{{ include.group }}" type="{{ include.type | default: "text" }}"
   {%- if include.required == nil or include.required %} required="required"{% endif -%}
   {%- if include.value %} value="{{ include.value }}"{% endif -%}
   {%- if include.readonly %} readonly="readonly"{% endif -%}
