--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -49,11 +49,11 @@
 {% else %}
   {%- case formGroup.widget -%}
     {%- when 'group' -%}
-      {% include form/widgets/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required -%}
+      {% include form/widgets/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required prepend=formGroup.prepend -%}
     {%- when 'select' -%}
-      {% include form/widgets/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options -%}
+      {% include form/widgets/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options prepend=formGroup.prepend -%}
     {%- when 'string' -%}
-      {% include form/widgets/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required -%}
+      {% include form/widgets/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepend -%}
     {%- when 'string-i18n' -%}
       {% include form/widgets/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepend -%}
   {%- endcase -%}
