--- a/_includes/form/presets/provinceSelect.html
+++ b/_includes/form/presets/provinceSelect.html
@@ -3,13 +3,12 @@
 
 <div class="form-group">
 
-  {%- include form/components/label.html id=include.id title=title -%}
-
+{%- include form/components/label.html id=include.id title=title %}
   <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
     <option value="">&nbsp;</option>
     {%- for provinces in site.data.i18n.provinces -%}
-    {%- assign province = provinces[1] -%}
-      <option value="{{ province.value }}">{{ province[page.lang] }}</option>
-    {%- endfor -%}
+    {%- assign province = provinces[1] %}
+    <option value="{{ province.value }}">{{ province[page.lang] }}</option>
+    {%- endfor %}
   </select>
 </div>
