--- a/_includes/standardsSchema.html
+++ b/_includes/standardsSchema.html
@@ -1,29 +1,6 @@
 <ul class="list-unstyled">
   <li>
     <details open>
-      <summary>date <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-      <p>{{ site.DateCodeDesc[page.lang] }}</p>
-      <ul class="list-unstyled">
-        <li>
-          <details open>
-            <summary>started <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.CodeStarted[page.lang] }}</h5>
-            <p>{{ site.StartedCodeDesc[page.lang] }}</p>
-          </details>
-        </li>
-        <li>
-          <details open>
-            <summary>metadataLastUpdated <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.LastUpdatedCode[page.lang] }}</h5>
-            <p>{{ site.MetaDataLastUpdatedCodeDesc[page.lang] }}</p>
-          </details>
-        </li>
-      </ul>
-    </details>
-  </li>
-
-  <li>
-    <details open>
       <summary>description <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
       <h5> {{ site.DescriptionUsesOss[page.lang] }} </h5>
       <p>{{ site.DescriptionUsesOssDesc[page.lang] }}</p>
@@ -60,17 +37,13 @@
 
   <li>
     <details open>
-      <summary>standard Code <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-      <h5>{{ site.standardCode[page.lang] }}</h5>
-      <p>{{ site.standardCodeDesc[page.lang] }}</p>
-    </details>
-  </li>
-
-  <li>
-    <details open>
-      <summary>standard organisation <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-      <h5>{{ site.standardOrg[page.lang] }}</h5>
-      <p>{{ site.standardOrgDesc[page.lang] }}</p>
+      <summary>standardsOrg <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+      <h5>{{ site.standardsOrg[page.lang] }}</h5>
+      <p>{{ site.standardsOrgDesc[page.lang] }}</p>
+      <ul>
+          <li>{{ site.standardsOrgEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+          <li>{{ site.standardsOrgFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+      </ul>
     </details>
   </li>
 
@@ -112,6 +85,29 @@
                 </details>
               </li>
             </ul>
+          </details>
+        </li>
+
+        <li>
+          <details open> 
+              <summary>date <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
+              <p>{{ site.DateCodeDesc[page.lang] }}</p>
+              <ul class="list-unstyled">
+                  <li>
+                  <details open>
+                      <summary>started <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+                      <h5>{{ site.CodeStarted[page.lang] }}</h5>
+                      <p>{{ site.StartedCodeDesc[page.lang] }}</p>
+                  </details>
+                  </li>
+                  <li>
+                  <details open>
+                      <summary>metadataLastUpdated <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+                      <h5>{{ site.LastUpdatedCode[page.lang] }}</h5>
+                      <p>{{ site.MetaDataLastUpdatedCodeDesc[page.lang] }}</p>
+                  </details>
+                  </li>
+              </ul>
           </details>
         </li>
 
