--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,7 @@
 <script type="text/javascript" src="../assets/js/src/validation.js"></script>
 <script type="text/javascript" src="../assets/js/src/tags.js"></script>
 <script type="text/javascript" src="../assets/js/src/programmingLanguages.js"></script>
+<script type="text/javascript" src="../assets/js/src/more-group.js"></script>
 {%- if page.ref == "adminForm" -%}
 <script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
 {%- endif -%}
