--- a/_includes/form/presets/licenses.html
+++ b/_includes/form/presets/licenses.html
@@ -1,5 +1,8 @@
 {%- assign title = "licenses" -%}
-{%- include form/components/title.html id=include.id title=title -%}
-{%- include form/components/group-i18n-group.html id=include.id title=title group="URL" type="url" -%}
-
+<div class="add-more-group" id="addMore{{ title }}" data-title="{{ title }}">
+{% include form/components/title.html id=include.id title=title -%}
+<div class="add-more-content">
+{% include form/components/group-i18n-group.html id=include.id title=title group="URL" type="url" -%}
 {%- include form/components/group-group.html id=include.id title=title group="spdxID" -%}
+</div>
+</div>
