--- a/_includes/schema/components/li.html
+++ b/_includes/schema/components/li.html
@@ -1,7 +1,7 @@
 <li>
   <details open>
     <summary>{{ include.title }}
-      {%- if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]
+      {%- if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} {% if include.more %}[array]{% else %}[{{ include.type | default: "string" }}]{% endif %}
     </summary>
     <h5>{{ site.data.i18n.form[include.id][include.title].label[page.lang] }}</h5>
     <p>{{ site.data.i18n.form[include.id][include.title].title[page.lang] }}</p>
