--- a/_includes/schema/widgets/string.html
+++ b/_includes/schema/widgets/string.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li.html id=include.id title=include.title required=include.required -%}
+{%- include schema/components/li.html id=include.id title=include.title required=include.required more=include.more -%}
