--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -55,7 +55,7 @@
     {%- when 'string' -%}
       {% include form/widgets/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepend more=formGroup.more -%}
     {%- when 'string-i18n' -%}
-      {% include form/widgets/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepen more=formGroup.mored -%}
+      {% include form/widgets/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepend more=formGroup.more -%}
   {%- endcase -%}
 {%- endif -%}
 </div>
