Finished the more-option for code, started others

--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -4,6 +4,7 @@
 
 <div class="form-element">
 {% if formGroup.preset -%}
+<div class="form-element-preset{% if formGroup.preset == 'licenses' or formGroup.preset == 'relatedCode' %} form-group-more{% endif %}" id="formgroup_preset_{{ formGroup.preset }}">
   {%- case formGroup.preset -%}
     {%- when 'adminCode' -%}
       {% include form/presets/adminCode.html id=idPreset -%}
@@ -46,7 +47,9 @@
     {%- when 'empty' -%}
       <!-- empty -->
   {%- endcase -%}
+</div>
 {% else %}
+<div class="form-group-widget{% if formGroup.more %} form-group-more{% endif %}" id="formgroup_widget_{% if formGroup.prepend != '' %}{{ formGroup.prepend }}{% endif %}{{ formGroup.title }}">
   {%- case formGroup.widget -%}
     {%- when 'group' -%}
       {% include form/widgets/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required prepend=formGroup.prepend more=formGroup.more -%}
@@ -57,6 +60,7 @@
     {%- when 'string-i18n' -%}
       {% include form/widgets/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepend more=formGroup.more -%}
   {%- endcase -%}
+</div>
 {%- endif -%}
 </div>
 
