--- a/_includes/form/widgets/group.html
+++ b/_includes/form/widgets/group.html
@@ -1,5 +1,6 @@
 {%- if include.more %}<div class="add-more-group" id="addMore{{ include.title }}" data-title="{{ include.title }}">{% endif -%}
 {%- include form/components/title.html id=include.id title=include.title prepend=include.prepend -%}
+{%- if include.more %}<div class="add-more-content">{% endif -%}
 
 {%- for field in include.fields -%}
 
@@ -8,7 +9,7 @@
   {%- else -%}
     {%- assign required = field.required -%}
   {%- endif -%}
-  {%- if include.more %}<div class="add-more-content">{% endif -%}
+
   {%- case field.widget -%}
     {%- when 'string' -%}
       {%- include form/components/group-group.html id=include.id title=include.title group=field.title required=required type=field.type value=field.value readonly=field.readonly rule=field.rule prepend=include.prepend -%}
@@ -18,4 +19,4 @@
       {%- include form/widgets/select.html id=include.id title=include.title required=required options=options -%}
   {%- endcase -%}
 {%- endfor -%}
-{%- if include.more -%}</div></div>{%- endif -%}
+{%- if include.more -%}</div></div>{%- endif %}
