--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,27 +35,28 @@
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
-<script type="text/javascript" src="../assets/js/lib/js-yaml.js"></script>
-<script type="text/javascript" src="../assets/js/src/deep-object.js"></script>
-<script type="text/javascript" src="../assets/js/src/git-file-manager.js"></script>
-<script type="text/javascript" src="../assets/js/src/custom-form-validation.js"></script>
-<script type="text/javascript" src="../assets/js/src/validation.js"></script>
-<script type="text/javascript" src="../assets/js/src/tags.js"></script>
-<script type="text/javascript" src="../assets/js/src/programmingLanguages.js"></script>
+<script src="../assets/js/lib/js-yaml.js"></script>
+<script src="../assets/js/src/deep-object.js"></script>
+<script src="../assets/js/src/git-file-manager.js"></script>
+<script src="../assets/js/src/custom-form-validation.js"></script>
+<script src="../assets/js/src/validation.js"></script>
+<script src="../assets/js/src/tags.js"></script>
+<script src="../assets/js/src/programmingLanguages.js"></script>
+<script src="../assets/js/src/more-group.js"></script>
 {%- if page.ref == "adminForm" -%}
-<script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
+<script src="../assets/js/src/adminForm.js"></script>
 {%- endif -%}
 {%- if page.ref == "codeForm" -%}
-<script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
-<script type="text/javascript" src="../assets/js/src/codeForm.js"></script>
+<script src="../assets/js/src/adminForm.js"></script>
+<script src="../assets/js/src/codeForm.js"></script>
 {%- endif -%}
 {%- if page.ref == "standardsForm" -%}
-<script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
-<script type="text/javascript" src="../assets/js/src/standardsForm.js"></script>
+<script src="../assets/js/src/adminForm.js"></script>
+<script src="../assets/js/src/standardsForm.js"></script>
 {%- endif -%}
 {%- if page.ref == "ossForm" -%}
-<script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
-<script type="text/javascript" src="../assets/js/src/ossForm.js"></script>
+<script src="../assets/js/src/adminForm.js"></script>
+<script src="../assets/js/src/ossForm.js"></script>
 {%- endif %}
 <script>
   const REPO_NAME = "{{ site.github_repository }}";
