Changed inline styles to WET-BOEW classes

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -152,7 +152,7 @@
 </div>
 
 <!-- Data Table -->
-<div class="col-md-9" style="margin-bottom: 20px;">
+<div class="col-md-9 mrgn-bttm-lg">
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0,4,5,7,8,9,10,11,12], "visible": false}], "paging": true}'>
     <thead>
       <!-- TODO: Better the translations, maybe use those from the form file -->
