--- a/_includes/ossTable.html
+++ b/_includes/ossTable.html
@@ -66,7 +66,7 @@
 </div>
 
 <!-- Data Table -->
-<div class="col-md-9" style="margin-bottom: 20px;">
+<div class="col-md-9 mrgn-bttm-lg">
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,5,6], "visible": false}], "paging": true}'>
     <thead>
       <tr>
