--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -34,7 +34,7 @@
         {%- endfor -%}
       </optgroup>
     </select>
-    <button type="button" class="btn btn-primary" id="newAdminButton" style="margin-left: 20px;"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form[include.id][title].button[page.lang] }}</button>
+    <button type="button" class="btn btn-primary mrgn-lft-md" id="newAdminButton"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form[include.id][title].button[page.lang] }}</button>
   </div>
 </div>
 
