--- a/_includes/form/presets/newAdmin.html
+++ b/_includes/form/presets/newAdmin.html
@@ -1,6 +1,6 @@
 {%- assign titleAdmin = "newAdmin" -%}
 {%- assign id = "admin" -%}
-<div id="{{ titleAdmin }}" {% if include.optional %}class="hide" style="position:relative; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px; padding-left: 20px"{% endif %}>
+<div id="{{ titleAdmin }}" class="well{% if include.optional %} hide{% endif %}"{% if include.optional %} style="position:relative;"{% endif %}>
 {%- if include.optional %}
 {% include form/components/title.html id=id title=titleAdmin styles="text-align: center; margin-top:10px" -%}
 <button id="removeNewAdminButton" style = "position: absolute; top: 10px; right: 10px;" class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
