--- a/_includes/form/presets/tags.html
+++ b/_includes/form/presets/tags.html
@@ -3,13 +3,13 @@
 <div id="tags">
   <div id="tagsEN" class="form-group">
     {% include form/components/label-i18n.html id=include.id title=title lang="en" %}
-    <div class="control-group input-group col-xs-2" style="margin-top:10px" >
+    <div class="control-group input-group col-xs-2 mrgn-tp-md">
       <input type="text" id="en{{ title }}" name="en{{ title }}" class="form-control" required="required">
     </div>
   </div>
   <div id="tagsFR" class="form-group">
     {% include form/components/label-i18n.html id=include.id title=title lang="fr" %}
-    <div class="control-group input-group col-xs-2" style="margin-top:10px" >
+    <div class="control-group input-group col-xs-2 mrgn-tp-md">
       <input type="text" id="fr{{ title }}" name="fr{{ title }}" class="form-control" required="required">
     </div>
   </div>
