--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -12,14 +12,14 @@ layout: default
     <button id="prbotSubmit{{ page.ref }}" type="button" class="btn btn-primary">{{ site.data.i18n.form.submit[page.lang] }}</button>
     <button id="formReset" type="reset" class="btn btn-default">{{ site.data.i18n.form.reset[page.lang] }}</button>
 
-    <div style="margin-top: 10px">
-      <div id="prbotSubmitAlertInProgress" class="alert alert-warning" style="display: none">
+    <div class="mrgn-tp-md">
+      <div id="prbotSubmitAlertInProgress" class="alert alert-warning hide">
         <b>{{ site.data.i18n.form.alert.progress[page.lang] }}</b>
       </div>
-      <div id="prbotSubmitAlertFail" class="alert alert-danger" style="display: none">
+      <div id="prbotSubmitAlertFail" class="alert alert-danger hide">
         <b>{{ site.data.i18n.form.alert.fail[page.lang ]}}</b>
       </div>
-      <div id="prbotSubmitAlertSuccess" class="alert alert-success" style="display: none">
+      <div id="prbotSubmitAlertSuccess" class="alert alert-success hide">
         <b>{{ site.data.i18n.form.alert.success[page.lang] }}</b>
       </div>
     </div>
