Removed optional value from new administration

--- a/_includes/form/presets/newAdmin.html
+++ b/_includes/form/presets/newAdmin.html
@@ -1,10 +1,8 @@
 {%- assign titleAdmin = "newAdmin" -%}
 {%- assign id = "admin" -%}
-<div id="{{ titleAdmin }}" class="well{% if include.optional %} hide{% endif %}"{% if include.optional %} style="position:relative;"{% endif %}>
-{%- if include.optional %}
+<div id="{{ titleAdmin }}" class="well hide" style="position:relative;">
 {% include form/components/title.html id=id title=titleAdmin styles="text-align: center; margin-top:10px" -%}
 <button id="removeNewAdminButton" style = "position: absolute; top: 10px; right: 10px;" class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-{%- endif %}
 {% include form/presets/orgLevel.html id=include.id %}
 {% include form/widgets/string.html id=id title="newAdminCode" rule="names" %}
 {% include form/presets/provinceSelect.html id=include.id %}
