--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -38,4 +38,4 @@
   </div>
 </div>
 
-{% include form/presets/newAdmin.html id=include.id optional=true -%}
+{% include form/presets/newAdmin.html id=include.id -%}
