--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -20,45 +20,16 @@
         <label for="dt_department">{{ site.data.i18n.tables.administrations[page.lang] }}</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
           <option value="">&nbsp;</option>
-          {%- assign admin_array = "" | split: ',' -%}
-          {%- for fptms in site.data.code -%}
-            {%- assign fptm = fptms[1] -%}
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- assign aName = site.data.administrations.federal | where: "code", admin.adminCode -%}
-              {%- if aName[0].name[page.lang] != nil -%}
-                {%- assign admin_array = admin_array | push: aName[0].name[page.lang] -%}
-              {%- endif -%}
-            {%- endfor -%}
-
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- assign aName = site.data.administrations.provincial | where: "code", admin.adminCode -%}
-              {%- if aName[0].name[page.lang] != nil -%}
-                {%- assign admin_array = admin_array | push: aName[0].name[page.lang] -%}
-              {%- endif -%}
-            {%- endfor -%}
-
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- assign aName = site.data.administrations.municipal | where: "code", admin.adminCode -%}
-              {%- if aName[0].name[page.lang] != nil -%}
-                {%- assign admin_array = admin_array | push: aName[0].name[page.lang] -%}
-              {%- endif -%}
-            {%- endfor -%}
-
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode -%}
-              {%- if aName[0].name[page.lang] != nil -%}
-                {%- assign admin_array = admin_array | push: aName[0].name[page.lang] -%}
-              {%- endif -%}
-            {%- endfor -%}
+          {%- assign admin_arr = "" | split: ',' -%}
+          {%- for admins in site.data.db.code.administrations -%}
+            {%- assign admin = admins[0] -%}
+            {%- assign administration = site.data.db.administrations[admin] -%}
+            {%- assign admin_arr = admin_arr | push: administration -%}
           {%- endfor -%}
-
-          {%- assign admin_array = admin_array | sort -%}
-          {%- for admin in admin_array -%}
-            <option value="{{ admin }}">{{ admin }}</option>
+          {%- capture sort -%}name.{{ page.lang }}{%- endcapture -%}
+          {%- assign admin_arr = admin_arr | sort: sort -%}
+          {%- for admin in admin_arr -%}
+            <option value="{{ admin.name[page.lang] }}">{{ admin.name[page.lang] }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -67,23 +38,18 @@
         <label for="dt_organization">{{ site.data.i18n.tables.organization[page.lang] }}</label>
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="5">
           <option value="">&nbsp;</option>
-          {%- assign org_array = "" | split: ',' -%}
-
-          {%- for fptms in site.data.code -%}
-            {%- assign fptm = fptms[1] -%}
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- for release in admin.releases -%}
-                {%- if release.organization[page.lang] != nil -%}
-                  {%- assign org_array = org_array | push: release.organization[page.lang] -%}
-                {%- endif -%}
-              {%- endfor -%}
+          {%- assign org_arr = "" | split: "," -%}
+          {%- for codes in site.data.db.code.releases -%}
+            {%- for releases in codes[1] -%}
+              {%- assign release = releases[1] -%}
+              {%- if release.organization[page.lang] != nil -%}
+                {%- assign org_arr = org_arr | push: release.organization[page.lang] -%}
+              {%- endif -%}
             {%- endfor -%}
           {%- endfor -%}
-
-          {%- assign org_array = org_array | group_by: "" | sort: "name" -%}
-          {%- for org in org_array -%}
-            <option value="{{ org.name }}">{{ org.name }}</option>
+          {%- assign org_arr = org_arr | sort_natural | uniq -%}
+          {%- for org in org_arr -%}
+            <option value="{{ org }}">{{ org }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -92,23 +58,18 @@
         <label for="dt_license">{{ site.data.i18n.tables.license[page.lang] }}</label>
         <select class="form-control" id="dt_license" name="dt_license" data-column="3">
           <option value="">&nbsp;</option>
-          {%- assign license_array = "" | split: ',' -%}
-
-          {%- for fptms in site.data.code -%}
-            {%- assign fptm = fptms[1] -%}
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- for release in admin.releases -%}
-                {%- for license in release.licenses -%}
-                  {%- assign license_array = license_array | push: license.spdxID -%}
-                {%- endfor -%}
+          {%- assign license_arr = "" | split: "," -%}
+          {%- for codes in site.data.db.code.releases -%}
+            {%- for releases in codes[1] -%}
+              {%- assign release = releases[1] -%}
+              {%- for license in release.licenses -%}
+                {%- assign license_arr = license_arr | push: license.spdxID -%}
               {%- endfor -%}
             {%- endfor -%}
           {%- endfor -%}
-
-          {%- assign license_array = license_array | group_by: "" | sort: "name" -%}
-          {%- for license in license_array -%}
-            <option value="{{ license.name }}">{{ license.name }}</option>
+          {%- assign license_arr = license_arr | sort_natural | uniq -%}
+          {%- for license in license_arr -%}
+            <option value="{{ license }}">{{ license }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -117,23 +78,18 @@
         <label for="dt_tag">{{ site.data.i18n.tables.tag[page.lang] }}</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
           <option value="">&nbsp;</option>
-          {%- assign tag_array = "" | split: ',' -%}
-
-          {%- for fptms in site.data.code -%}
-            {%- assign fptm = fptms[1] -%}
-            {%- for admins in fptm -%}
-              {%- assign admin = admins[1] -%}
-              {%- for release in admin.releases -%}
-                {%- for tag in release.tags[page.lang] -%}
-                  {%- assign tag_array = tag_array | push: tag -%}
-                {%- endfor -%}
+          {%- assign tag_arr = "" | split: "," -%}
+          {%- for codes in site.data.db.code.releases -%}
+            {%- for releases in codes[1] -%}
+              {%- assign release = releases[1] -%}
+              {%- for tag in release.tags[page.lang] -%}
+                {%- assign tag_arr = tag_arr | push: tag -%}
               {%- endfor -%}
             {%- endfor -%}
           {%- endfor -%}
-
-          {%- assign tag_array = tag_array | group_by: "" | sort: "name" -%}
-          {%- for tag in tag_array -%}
-            <option value="{{ tag.name }}">{{ tag.name }}</option>
+          {%- assign tag_arr = tag_arr | sort_natural | uniq -%}
+          {%- for tag in tag_arr -%}
+            <option value="{{ tag }}">{{ tag }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -165,7 +121,7 @@
         <th>{{ site.data.i18n.tables.organization[page.lang] }}</th>
         <th>Code Repo</th>
         <th>{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</th>
-        <th>{{ site.data.i18n.general.language[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.languages[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.relatedCode[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.status[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.created[page.lang] }}</th>
@@ -174,137 +130,96 @@
     </thead>
     <tbody>
 
-      {%- for fptms in site.data.code -%}
-        {%- assign fptm = fptms[1] -%}
-        {%- for admins in fptm -%}
-          {%- assign admin = admins[1] -%}
-          {%- for release in admin.releases -%}
-          <tr>
-            {%- assign aName = site.data.administrations.federal | where: "code", admin.adminCode -%}
-            {%- if aName[0].name[page.lang] != nil -%}
-              <td>{{ aName[0].name[page.lang] }}</td>
-            {%- endif -%}
-
-            {%- assign aName = site.data.administrations.provincial | where: "code", admin.adminCode -%}
-            {%- if aName[0].name[page.lang] != nil -%}
-              <td>{{ aName[0].name[page.lang] }}</td>
-            {%- endif -%}
-
-            {%- assign aName = site.data.administrations.municipal | where: "code", admin.adminCode -%}
-            {%- if aName[0].name[page.lang] != nil -%}
-              <td>{{ aName[0].name[page.lang] }}</td>
-            {%- endif -%}
-
-            {%- assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode -%}
-            {%- if aName[0].name[page.lang] != nil -%}
-              <td>{{ aName[0].name[page.lang] }}</td>
-            {%- endif -%}
-
-            <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
-            <td>{{ release.description[page.lang] }}</td>
-            <td>
-              {%- for license in release.licenses -%}
-                <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
-              {%- endfor -%}
-            </td>
-            <td>
-              {%- for tag in release.tags[page.lang] -%}
-                {{ tag }}&nbsp;
-              {%- endfor -%}
-            </td>
-            <td>{{ release.organization[page.lang] }}</td>
-            <td>
-              <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
-                {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
-              </a>
-            </td>
-            <td>{{fptms[0] | capitalize}}</td>
-            <td>
-              {%- for languages in release.languages -%}
-                {{ languages }}&nbsp;
-              {%- endfor -%}
-            </td>
-            <td>
-              {%- for relatedCode in release.relatedCode -%}
-                <a href= "{{ relatedCode.URL[page.lang] }}">{{ relatedCode.name[page.lang] }}</a>
-              {%- endfor -%}
-            </td>
-            <td>{{ release.status }}&nbsp;</td>
-            <td>{{ release.date.created }}&nbsp;</td>
-            <td>{{ release.date.metadataLastUpdated }}&nbsp;</td>
-          </tr>
+      {%- for administrations in site.data.db.code.administrations -%}
+        {%- assign administration = administrations[1] -%}
+        {%- for releases in administration.releases -%}
+          {%- assign release_name = releases | slugify: "ascii" -%}
+          {%- assign release = site.data.db.code.releases[administration.adminCode][release_name] -%}
+      <tr>
+        <td>{{ site.data.db.administrations[administration.adminCode].name[page.lang] }}</td>
+        <td><a href="#{{ release.name[page.lang] | slugify: "ascii" }}" aria-controls="{{ release.name[page.lang] | slugify: "ascii" }}" class="overlay-lnk" role="button">{{ release.name[page.lang] }}</a></td>
+        <td>{{ release.description[page.lang] }}</td>
+        <td>
+          {%- for license in release.licenses -%}
+          <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>
           {%- endfor -%}
+        </td>
+        <td>
+          {%- for tag in release.tags[page.lang] -%}
+          {{ tag }}&nbsp;
+          {%- endfor -%}
+        </td>
+        <td>{{ release.organization[page.lang] }}</td>
+        <td><a href="{{ release.repositoryURL[page.lang] }}" target="_blank">{{ release.repositoryURL[page.lang] | remove: "https://" | replace first: "/", "                    " | truncate: 20, "" | rstrip }}</a></td>
+        {%- assign parent = site.data.db.administrations[administration.adminCode].parent -%}
+        <td>{{ site.data.i18n.administrations[parent][page.lang] }}</td>
+        <td>
+          {%- for language in release.languages -%}
+          {{ language }}&nbsp;
+          {%- endfor -%}
+        </td>
+        <td>
+          {%- for relatedCode in release.relatedCode -%}
+          <a href="{{ relatedCode.URL[page.lang] }}">{{ relatedCode.name[page.lang] }}</a>
+          {%- endfor -%}
+        </td>
+        <td>{{ release.status }}</td>
+        <td>{{ release.date.created }}</td>
+        <td>{{ release.date.metadataLastUpdated }}</td>
+      </tr>
         {%- endfor -%}
       {%- endfor -%}
-
     </tbody>
   </table>
 </div>
 
 
 <!-- Modal Lightboxes -->
-{%- for fptms in site.data.code -%}
-  {%- assign fptm = fptms[1] -%}
-  {%- for admins in fptm -%}
-    {%- assign admin = admins[1] -%}
-    {%- for release in admin.releases -%}
-      <section id="{{ release.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
-        <header class="modal-header">
-          <h2 class="modal-title">{{ release.name[page.lang] }}</h2>
-        </header>
-        <div class="modal-body">
-          <p><strong>{{ release.description[page.lang] }}</strong></p>
-          <p>{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}: {{fptms[0] | capitalize}}</p>
-          {%- assign aName = site.data.administrations.federal | where: "code", admin.adminCode -%}
-          {%- if aName[0].name[page.lang] != nil -%}
-            <p>Administration: {{ aName[0].name[page.lang] }}</p>
-          {%- endif -%}
-
-          {%- assign aName = site.data.administrations.provincial | where: "code", admin.adminCode -%}
-          {%- if aName[0].name[page.lang] != nil -%}
-            <p>Administration: {{ aName[0].name[page.lang] }}</p>
-          {%- endif -%}
-
-          {%- assign aName = site.data.administrations.municipal | where: "code", admin.adminCode -%}
-          {%- if aName[0].name[page.lang] != nil -%}
-            <p>Administration: {{ aName[0].name[page.lang] }}</p>
-          {%- endif -%}
-
-          {%- assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode -%}
-          {%- if aName[0].name[page.lang] != nil -%}
-            <p>Administration: {{ aName[0].name[page.lang] }}</p>
-          {%- endif -%}
-
+{%- for administrations in site.data.db.code.administrations -%}
+  {%- assign administration = administrations[1] -%}
+  {%- for releases in administration.releases -%}
+    {%- assign release_name = releases | slugify: "ascii" -%}
+    {%- assign release = site.data.db.code.releases[administration.adminCode][release_name] -%}
+    <section id="{{ release.name[page.lang] | slugify: "ascii" }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
+      <header class="modal-header">
+        <h2 class="modal-title">{{ release.name[page.lang] }}</h2>
+      </header>
+      <div class="modal-body">
+        <p><strong>{{ release.description[page.lang] }}</strong></p>
+        {%- assign parent = site.data.db.administrations[administration.adminCode].parent -%}
+        <p>{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}: {{ site.data.i18n.administrations[parent][page.lang] }}</p>
+        <p>{{ site.data.db.administrations[administration.adminCode].name[page.lang] }}</p>
         {%- if release.organization[page.lang] != nil -%}
-          <p>{{ site.data.i18n.tables.organization[page.lang] }}: {{ release.organization[page.lang] }}</p>
+        <p>{{ site.data.i18n.tables.lightbox.sourceCode[page.lang] }}:
+          <a href="{{ release.repositoryURL.URL[page.lang] }}" target="_blank">{{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}</a>
+        </p>
         {%- endif -%}
-        <p>Source code:
-          <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
-              {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
-          </a>
-        </p>
-        <p>{{ site.data.i18n.tables.license[page.lang] }}(s):
+        <p>{{ site.data.i18n.tables.license[page.lang] }}:</p>
+        <ul>
           {%- for license in release.licenses -%}
-            <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
+            <li><a href="{{ license.URL[page.lang] }}">{{ license.spdxID }}</a></li>
           {%- endfor -%}
-        </p>
-        <p>{{ site.data.i18n.tables.tag[page.lang] }}(s):
+        </ul>
+        <p>{{ site.data.i18n.tables.tag[page.lang] }}:</p>
+        <ul>
           {%- for tag in release.tags[page.lang] -%}
-            {{ tag }}
+          <li>{{ tag }}</li>
           {%- endfor -%}
-        </p>
-        <p>{{ site.data.i18n.tables.language[page.lang] }}(s):
-          {%- for languages in release.languages -%}
-            {{ languages }}
+        </ul>
+        {%- if release.languages != nil -%}
+        <p>{{ site.data.i18n.tables.languages[page.lang] }}:</p>
+        <ul>
+          {%- for language in release.languages -%}
+          <li>{{ language }}</li>
           {%- endfor -%}
-        </p>
+        </ul>
+        {%- endif -%}
         {%- if release.status != nil -%}
           <p>{{ site.data.i18n.tables.status[page.lang] }}: {{ release.status }}</p>
         {%- endif -%}
         <p>{{ site.data.i18n.tables.created[page.lang] }}: {{ release.date.created }}</p>
         <p>{{ site.data.i18n.tables.lastUpdated[page.lang] }}: {{ release.date.metadataLastUpdated }}</p>
-
-        <h3>Contact</h3>
+        <h3>{{ site.data.i18n.tables.lightbox.contact[page.lang] }}</h3>
         {%- if release.contact.name != nil -%}
           <p>{{ release.contact.name }}</p>
         {%- endif -%}
@@ -317,9 +232,8 @@
         {%- if release.contact.URL != nil -%}
           <p><a href="{{ release.contact.URL[page.lang] }}" target="_blank">{{ release.contact.URL[page.lang] }}</a></p>
         {%- endif -%}
-        </div>
-      </section>
-    {%- endfor -%}
+      </div>
+    </section>
   {%- endfor -%}
 {%- endfor -%}
 
